<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menu_test"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.menu.HomeActivity"
    android:background="@drawable/app_background_2"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Home"
        app:titleMarginStart="30dp"
        app:titleTextColor="@color/white">

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/btn_meditation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/meditation"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6"
        app:layout_constraintHorizontal_bias="0.2"/>
    <TextView
        android:id="@+id/btn_attention"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/attention"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6"
        app:layout_constraintHorizontal_bias="0.8"/>


    <androidx.cardview.widget.CardView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:elevation="12dp"
        android:id="@+id/btn_connect_spotify"
        app:cardCornerRadius="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintHorizontal_bias="0.8"
        android:layout_marginTop="100dp"
        >

        <ImageView
            android:id="@+id/imageViewSpotify"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:scaleType="centerCrop"
            android:src="@drawable/spotify_logo_2" />
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:elevation="12dp"
        android:id="@+id/btn_connect_headband"
        app:cardCornerRadius="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintHorizontal_bias="0.2"
        android:layout_marginTop="100dp"
        >
        <ImageView
            android:layout_height="80dp"
            android:layout_width="match_parent"
            android:id="@+id/imageViewMynd"
            android:src="@drawable/mynd_logo"
            android:scaleType="centerCrop"/>
    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/conenction_state_spotify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect"

        app:layout_constraintEnd_toEndOf="@id/btn_connect_spotify"
        app:layout_constraintStart_toStartOf="@id/btn_connect_spotify"
        app:layout_constraintTop_toBottomOf="@id/btn_connect_spotify"
        android:layout_marginTop="20dp"
        />
    <TextView
        android:id="@+id/connecion_state_headband"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect"

        app:layout_constraintEnd_toEndOf="@id/btn_connect_headband"
        app:layout_constraintStart_toStartOf="@id/btn_connect_headband"
        app:layout_constraintTop_toBottomOf="@id/btn_connect_headband"
        android:layout_marginTop="20dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintTop_toBottomOf="@+id/connecion_state_headband"
        android:layout_marginTop="100dp"
        >

        <androidx.cardview.widget.CardView
            android:id="@+id/sensor_home"
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/purple_700"
            app:cardCornerRadius="30dp"
            app:cardMaxElevation="6dp">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Meditation"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                     />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/map_home"
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/purple_200"
            app:cardCornerRadius="30dp"
            app:cardMaxElevation="6dp">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Attention"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textAlignment="center"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
